# ai-im

./: .env.development  .env.production  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.ts  vite.config.ts
docs/: API.md  DEPLOY.md
server/: nitro.config.ts
server/.nitro/: nitro.json
server/.nitro/dev/: index.mjs  index.mjs.map
server/.nitro/types/: nitro-config.d.ts  nitro-imports.d.ts  nitro-routes.d.ts
server/api/: agent.delete.ts  agent.post.ts  agent.put.ts  plugin.put.ts  robot.delete.ts  robot.post.ts  robot.put.ts  schedule.delete.ts  schedule.post.ts  schedule.put.ts
server/api/agent/: detail.get.ts  list.get.ts
server/api/chat/: group.post.ts  msg.post.ts  session.delete.ts  session.post.ts
server/api/chatTopUp/: topUpMsg.post.ts
server/api/contact/: add.post.ts  (+7 more)
server/data/: ai-im.db  ai-im.db-shm  ai-im.db-wal
server/plugins/: websocket.ts
server/utils/: db.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: init.rs  main.rs  tray.rs  user_cmd.rs
src/enums/: index.ts
src/hooks/: useChat.ts  useCommon.ts  useWebSocket.ts  useWindow.ts
src/layout/: index.vue
src/mock/: index.ts
src/router/: index.ts
src/services/: apis.ts  http.ts  tauriCommand.ts  types.ts  webSocketAdapter.ts  wsType.ts
src/stores/: agent.ts  chat.ts  global.ts  index.ts  plugin.ts  robot.ts  schedule.ts  setting.ts  user.ts
src/typings/: components.d.ts  global.d.ts
src/utils/: tauri.ts
(+88 files in other folders)
